July 28 UI changes from Diana 	modified:   cee1/urls.py 	modified:   home/templates/base.html 	modified:   home/templates/home.html 	modified:   home/templates/narrow_network.html 	new file:   home/templates/pharm_cost.html 	modified:   home/views.py 	new file:   static/dimages/20150728_home_1.png 	new file:   static/dimages/20150728_home_2.png 	new file:   static/dimages/20150728_home_3.png 	new file:   static/dimages/20150728_home_4.png 	new file:   static/dimages/cost_driver_pharmacy_jul28.png 	new file:   static/dimages/narrow_network_jul28.png

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -40,8 +40,8 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li><a href="/home">Home</a></li>
-            <li><a href="/strategies">Strategies</a></li>
-            <li><a href="/cost_drivers">Cost Drivers</a></li>
+            <li><a href="/narrow_network">Strategies</a></li>
+            <li><a href="/pharm_cost">Cost Drivers</a></li>
             <li><a href="/cohorts">Cohorts</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
