--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -34,7 +34,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="static/images/logo-blue.png"></a>
+          <a class="navbar-brand" href="/"><img src="/static/images/logo-blue.png"></a>
             <ul class="nav">
         </div>
         <div class="navbar-collapse collapse">
