--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -2,41 +2,65 @@
 
 {% block container_content %}
 
-  <div class="container">
-    <div class="row">
-      <div class="col-md-12">
-	<img src="static/dimages/20150728_home_1.png" />
-      </div>
-<table width="100%">
-  <td><hr color="#ccc"/></td>
-  <td style="width:1px; padding: 0 10px; white-space: nowrap;">Redesign Benefits Plan</td>
-  <td><hr color="#ccc" /></td>
-</table>
-      <div class="col-md-12">
-	<a href="narrow_network">
-	<img src="static/dimages/20150728_home_2.png" />
-	</a>
-      </div>
-<table width="100%">
-  <td><hr color="#ccc"/></td>
-  <td style="width:1px; padding: 0 10px; white-space: nowrap;">Investigate Costs</td>
-  <td><hr color="#ccc" /></td>
-</table>
-      <div class="col-md-12">
-	<img src="static/dimages/20150728_home_3.png" />
-      </div>
-<table width="100%">
-  <td><hr color="#ccc"/></td>
-  <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
-  <td><hr color="#ccc" /></td>
-</table>
-      <div class="col-md-12">
-	<img src="static/dimages/20150728_home_4.png" />
-      </div>
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+	  <img src="static/dimages/20150728_home_1.png" />
     </div>
-
+    <table width="100%">
+      <td><hr color="#ccc"/></td>
+      <td style="width:1px; padding: 0 10px; white-space: nowrap;">Redesign Benefits Plan</td>
+      <td><hr color="#ccc" /></td>
+    </table>
+    <div class="col-md-12">
+        <a href="narrow_network">
+        <img src="static/dimages/20150728_home_2.png" />
+        </a>
+    </div>
+    <table width="100%">
+      <td><hr color="#ccc"/></td>
+      <td style="width:1px; padding: 0 10px; white-space: nowrap;">Investigate Costs</td>
+      <td><hr color="#ccc" /></td>
+    </table>
+    <div class="col-md-12">
+	  <img src="static/dimages/20150728_home_3.png" />
+    </div>
+    <table width="100%">
+      <td><hr color="#ccc"/></td>
+      <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
+      <td><hr color="#ccc" /></td>
+    </table>
+    <div class="col-md-12">
+      <img src="static/dimages/20150728_home_4_r0.png" class="col-md-12" />
+    </div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+      <a href="cost_pharm">
+        <img src="static/dimages/20150728_home_4_cost_pharm.png" class="col-md-4" />
+      </a>
+      <img src="static/dimages/20150728_home_4_cost_image.png" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_cost_redun.png" class="col-md-4" />
+    </div></div>
+    <div class="col-md-12" style="height: 32px;"></div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+      <img src="static/dimages/20150728_home_4_use_net.png" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_use_er.png" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_use_pgm.png" class="col-md-4" />
+    </div></div>
+    <div class="col-md-12" style="height: 32px;"></div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+      <a href="pop_biom">
+        <img src="static/dimages/20150728_home_4_pop_biom.png" class="col-md-4" />
+      </a>
+      <a href="pop_risk">
+        <img src="static/dimages/20150728_home_4_pop_risk.png" class="col-md-4" />
+      </a>
+      <img src="static/dimages/20150728_home_4_pop_gaps.png" class="col-md-4" />
+    </div></div>
+    <div class="col-md-12">
+      <img src="static/dimages/20150728_home_4_r5_cohort.png" />
+    </div>
   </div>
+</div>
 
 
 {% endblock %}
