--- a/home/templates/splash.html
+++ b/home/templates/splash.html
@@ -6,7 +6,8 @@
 
       {% block page_header %}
         <div class="page-header">
-          <h1>Welcome to the Zakipoint Clickable Demo. <br/><small class="text-muted">Use of this system is restricted to trusted testers</small></h1>
+          <h1>Welcome to Zakipoint Alpha. <br/>
+	    <small class="text-muted">Use of this system is restricted to trusted testers</small></h1>
         </div>
       {% endblock %} <!-- endblock page_header -->
 
