--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -34,20 +34,22 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/static/images/logo-blue.png"></a>
+          <a class="navbar-brand" href="/"><img src="/static/images/logo-blue.png?version={{ version }}"></a>
             <ul class="nav">
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
+	    {% if session.username %}
             <li><a href="/home">Home</a></li>
             <li><a href="/narrow_network">Strategies</a></li>
-            <li><a href="/pharm_cost">Cost Drivers</a></li>
+            <li><a href="/cost_pharm">Cost Drivers</a></li>
             <li><a href="/cohorts">Cohorts</a></li>
+	    {% endif %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
             {% if session.username %}
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-user"></span> {{fullname}}<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-user"></span> {{ fullname }}<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="/signout"><span class="fa fa-sign-out"></span> Signout</a></li>
                   <li><a href="#"><span class="text-muted"><span class="fa fa-user"> Profile</span></a></li>
