--- a/home/templates/cost_pharm.html
+++ b/home/templates/cost_pharm.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-	<img src="static/dimages/cost_driver_pharmacy_aug17.png" />
+	<img src="static/dimages/cost_driver_pharmacy_aug17.png?version={{ version }}" />
       </div>
     </div>
   </div>
