--- a/home/templates/home_on_load.html
+++ b/home/templates/home_on_load.html
@@ -4,7 +4,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-	  <img src="static/dimages/20150728_home_1.png" />
+	  <img src="static/dimages/20150728_home_1.png?version={{ version }}" />
     </div>
     <table width="100%">
       <td><hr color="#ccc"/></td>
@@ -13,7 +13,7 @@
     </table>
     <div class="col-md-12">
         <a href="narrow_network">
-        <img src="static/dimages/20150728_home_2.png" />
+        <img src="static/dimages/20150728_home_2.png?version={{ version }}" />
         </a>
     </div>
     <table width="100%">
@@ -22,7 +22,7 @@
       <td><hr color="#ccc" /></td>
     </table>
     <div class="col-md-12">
-	  <img src="static/dimages/20150728_home_3.png" />
+	  <img src="static/dimages/20150728_home_3.png?version={{ version }}" />
     </div>
     <table width="100%">
       <td><hr color="#ccc"/></td>
@@ -30,33 +30,33 @@
       <td><hr color="#ccc" /></td>
     </table>
     <div class="col-md-12">
-      <img src="static/dimages/20150728_home_4_r0.png" class="col-md-12" />
+      <img src="static/dimages/20150728_home_4_r0.png?version={{ version }}" class="col-md-12" />
     </div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
       <a href="cost_pharm">
-        <img src="static/dimages/20150728_home_4_cost_pharm.png" class="col-md-4" />
+        <img src="static/dimages/20150728_home_4_cost_pharm.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/20150728_home_4_cost_image.png" class="col-md-4" />
-      <img src="static/dimages/20150728_home_4_cost_redun.png" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_cost_image.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_cost_redun.png?version={{ version }}" class="col-md-4" />
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-      <img src="static/dimages/20150728_home_4_use_net.png" class="col-md-4" />
-      <img src="static/dimages/20150728_home_4_use_er.png" class="col-md-4" />
-      <img src="static/dimages/20150728_home_4_use_pgm.png" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_use_net.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_use_er.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_use_pgm.png?version={{ version }}" class="col-md-4" />
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
       <a href="pop_biom">
-        <img src="static/dimages/20150728_home_4_pop_biom.png" class="col-md-4" />
+        <img src="static/dimages/20150728_home_4_pop_biom.png?version={{ version }}" class="col-md-4" />
       </a>
       <a href="pop_risk">
-        <img src="static/dimages/20150728_home_4_pop_risk.png" class="col-md-4" />
+        <img src="static/dimages/20150728_home_4_pop_risk.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/20150728_home_4_pop_gaps.png" class="col-md-4" />
+      <img src="static/dimages/20150728_home_4_pop_gaps.png?version={{ version }}" class="col-md-4" />
     </div></div>
     <div class="col-md-12">
-      <img src="static/dimages/20150728_home_4_r5_cohort.png" />
+      <img src="static/dimages/20150728_home_4_r5_cohort.png?version={{ version }}" />
     </div>
   </div>
 </div>
