--- a/home/templates/narrow_network.html
+++ b/home/templates/narrow_network.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-	<img src="static/dimages/narrow_network_jul30.png" />
+	<img src="static/dimages/narrow_network_jul30.png?version={{ version }}" />
       </div>
     </div>
   </div>
