--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-	<img src="static/dimages/20150824_biom.png" />
+	<img src="static/dimages/20150824_biom.png?version={{ version }}" />
       </div>
     </div>
   </div>
