New graphics, new navigation 	modified:   home/session.py 	modified:   home/templates/base.html 	modified:   home/templates/home.html 	modified:   home/views.py 	new file:   static/dimages/0911_cost_admin.png 	new file:   static/dimages/0911_cost_biom.png 	new file:   static/dimages/0911_cost_er.png 	new file:   static/dimages/0911_cost_gaps.png 	new file:   static/dimages/0911_cost_high.png 	new file:   static/dimages/0911_cost_image.png 	new file:   static/dimages/0911_cost_lopgm.png 	new file:   static/dimages/0911_cost_pharm.png 	new file:   static/dimages/0911_cost_rdndt.png 	new file:   static/dimages/0911_cost_risk.png 	new file:   static/dimages/0911_cost_spse.png 	new file:   static/dimages/0911_r2.png 	new file:   static/dimages/0911_r4.png 	new file:   static/dimages/0911_use_netwk.png

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,32 +1,16 @@
 {% extends "base.html" %}
 
 {% block container_content %}
+<div id="page-top" />
 <div class="container">
   <div class="row">
     <div class="col-md-12">
 	  <img src="static/dimages/20150728_home_1.png?version={{ version }}" />
     </div>
-    <table width="100%">
-      <td><hr color="#ccc"/></td>
-      <td style="width:1px; padding: 0 10px; white-space: nowrap;">Redesign Benefits Plan</td>
-      <td><hr color="#ccc" /></td>
-    </table>
-    <div class="col-md-12">
-        <a href="narrow_network">
-        <img src="static/dimages/20150728_home_2.png?version={{ version }}" />
-        </a>
-    </div>
-    <table width="100%">
+    <img src="static/dimages/0911_r2.png?version={{ version }}" />
+    <table width="100%" id="cost-driver">
       <td><hr color="#ccc"/></td>
       <td style="width:1px; padding: 0 10px; white-space: nowrap;">Investigate Costs</td>
-      <td><hr color="#ccc" /></td>
-    </table>
-    <div class="col-md-12">
-	  <img src="static/dimages/20150728_home_3.png?version={{ version }}" />
-    </div>
-    <table width="100%">
-      <td><hr color="#ccc"/></td>
-      <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
       <td><hr color="#ccc" /></td>
     </table>
     <div class="col-md-12">
@@ -34,29 +18,40 @@
     </div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
       <a href="cost_pharm">
-        <img src="static/dimages/20150728_home_4_cost_pharm.png?version={{ version }}" class="col-md-4" />
+        <img src="static/dimages/0911_cost_pharm.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/20150728_home_4_cost_image.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/20150728_home_4_cost_redun.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_er.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_lopgm.png?version={{ version }}" class="col-md-4" />
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-      <img src="static/dimages/20150728_home_4_use_net.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/20150728_home_4_use_er.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/20150728_home_4_use_pgm.png?version={{ version }}" class="col-md-4" />
-    </div></div>
-    <div class="col-md-12" style="height: 32px;"></div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-      <a href="pop_biom">
-        <img src="static/dimages/20150728_home_4_pop_biom.png?version={{ version }}" class="col-md-4" />
+      <a href="pop_risk">
+        <img src="static/dimages/0911_cost_biom.png?version={{ version }}" class="col-md-4" />
       </a>
       <a href="pop_risk">
-        <img src="static/dimages/20150728_home_4_pop_risk.png?version={{ version }}" class="col-md-4" />
+        <img src="static/dimages/0911_cost_risk.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/20150728_home_4_pop_gaps.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_high.png?version={{ version }}" class="col-md-4" />
     </div></div>
+    <div class="col-md-12" style="height: 32px;"></div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+      <img src="static/dimages/0911_use_netwk.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_image.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_gaps.png?version={{ version }}" class="col-md-4" />
+    </div></div>
+    <div class="col-md-12" style="height: 32px;"></div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+      <img src="static/dimages/0911_cost_admin.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_spse.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_rdndt.png?version={{ version }}" class="col-md-4" />
+    </div></div>
+    <table width="100%" id="cohorts">
+      <td><hr color="#ccc"/></td>
+      <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
+      <td><hr color="#ccc" /></td>
+    </table>
     <div class="col-md-12">
-      <img src="static/dimages/20150728_home_4_r5_cohort.png?version={{ version }}" />
+      <img src="static/dimages/0911_r4.png?version={{ version }}" />
     </div>
   </div>
 </div>
