--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -24,7 +24,6 @@
   <body>
 
     {% block nav %}
-
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -40,10 +39,9 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
 	    {% if session.username %}
-            <li><a href="/home">Home</a></li>
-            <li><a href="/narrow_network">Strategies</a></li>
-            <li><a href="/cost_pharm">Cost Drivers</a></li>
-            <li><a href="/cohorts">Cohorts</a></li>
+            <li><a href="/home#page-top">Overview</a></li>
+            <li><a href="/home#cost-driver">Cost Driver</a></li>
+            <li><a href="/home#cohorts">Population</a></li>
 	    {% endif %}
           </ul>
           <ul class="nav navbar-nav navbar-right">
