Centering some blocks 	modified:   home.html

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -4,18 +4,22 @@
 <div id="page-top" />
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
 	  <img src="static/dimages/20150728_home_1.png?version={{ version }}" />
+    </div></div>
+    <div style="width: 80%; margin: 0 auto;">
+      <img src="static/dimages/0911_r2.png?version={{ version }}" />
     </div>
-    <img src="static/dimages/0911_r2.png?version={{ version }}" />
+    <div style="width: 80%; margin: 0 auto;">
     <table width="100%" id="cost-driver">
       <td><hr color="#ccc"/></td>
       <td style="width:1px; padding: 0 10px; white-space: nowrap;">Investigate Costs</td>
       <td><hr color="#ccc" /></td>
     </table>
-    <div class="col-md-12">
-      <img src="static/dimages/20150728_home_4_r0.png?version={{ version }}" class="col-md-12" />
     </div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+      <img src="static/dimages/20150728_home_4_r0.png?version={{ version }}" class="col-md-12" />
+    </div></div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
       <a href="cost_pharm">
         <img src="static/dimages/0911_cost_pharm.png?version={{ version }}" class="col-md-4" />
@@ -44,15 +48,15 @@
       <img src="static/dimages/0911_cost_admin.png?version={{ version }}" class="col-md-4" />
       <img src="static/dimages/0911_cost_spse.png?version={{ version }}" class="col-md-4" />
       <img src="static/dimages/0911_cost_rdndt.png?version={{ version }}" class="col-md-4" />
-    </div></div>
+    </div></div><div style="width: 80%; margin: 0 auto;">
     <table width="100%" id="cohorts">
       <td><hr color="#ccc"/></td>
       <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
       <td><hr color="#ccc" /></td>
-    </table>
-    <div class="col-md-12">
+    </table></div>
+    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
       <img src="static/dimages/0911_r4.png?version={{ version }}" />
-    </div>
+    </div></div>
   </div>
 </div>
     {% block pagescript %}
