--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-	  <img src="static/dimages/20150728_home_1.png?version={{ version }}" />
+	  <img src="static/dimages/0911_home_1.png?version={{ version }}" />
     </div></div>
     <div style="width: 80%; margin: 0 auto;">
       <img src="static/dimages/0911_r2.png?version={{ version }}" />
@@ -48,7 +48,8 @@
       <img src="static/dimages/0911_cost_admin.png?version={{ version }}" class="col-md-4" />
       <img src="static/dimages/0911_cost_spse.png?version={{ version }}" class="col-md-4" />
       <img src="static/dimages/0911_cost_rdndt.png?version={{ version }}" class="col-md-4" />
-    </div></div><div style="width: 80%; margin: 0 auto;">
+    </div></div>
+    <div style="width: 80%; margin: 0 auto;">
     <table width="100%" id="cohorts">
       <td><hr color="#ccc"/></td>
       <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
