--- a/home/templates/sign-in.html
+++ b/home/templates/sign-in.html
@@ -42,7 +42,7 @@
                     <div class="col-sm-offset-2 col-sm-10">
                       <button type="submit" class="btn btn-default" formaction="/sign-in-form" formmethod="post">Sign in</button>
                       <br/><br/>
-                      <button type="submit" class="btn btn-warning">Forgot Password?</button>
+<!--                      <button type="submit" class="btn btn-warning">Forgot Password?</button> -->
                     </div>
                   </div>
                 </form>
