Ready for a demo 	modified:   ../../home/templates/base.html 	modified:   ../../home/templates/home.html 	modified:   ../../home/templates/sign-in.html 	modified:   ../../home/views.py 	modified:   ../dimages/0911_r2.png 	new file:   ../dimages/0916_home_1.png 	modified:   ../dimages/20150820_high_risk.png 	new file:   ../dimages/cost_driver_pharmacy_Aug17.png 	new file:   ../images/favicon-transparent.png 	new file:   ../images/logo-blue-transparent.png 	modified:   ../images/logo-blue.png 	new file:   ../images/zph-logo-200sq.png

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-	  <img src="static/dimages/0911_home_1.png?version={{ version }}" />
+	  <img src="static/dimages/0916_home_1.png?version={{ version }}" />
     </div></div>
     <div style="width: 80%; margin: 0 auto;">
       <img src="static/dimages/0911_r2.png?version={{ version }}" />
@@ -29,7 +29,7 @@
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-      <a href="pop_risk">
+      <a href="pop_biom">
         <img src="static/dimages/0911_cost_biom.png?version={{ version }}" class="col-md-4" />
       </a>
       <a href="pop_risk">
@@ -39,7 +39,9 @@
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
     <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-      <img src="static/dimages/0911_use_netwk.png?version={{ version }}" class="col-md-4" />
+      <a href="narrow_network">
+        <img src="static/dimages/0911_use_netwk.png?version={{ version }}" class="col-md-4" />
+      </a>
       <img src="static/dimages/0911_cost_image.png?version={{ version }}" class="col-md-4" />
       <img src="static/dimages/0911_cost_gaps.png?version={{ version }}" class="col-md-4" />
     </div></div>
