--- a/home/templates/sign-in.html
+++ b/home/templates/sign-in.html
@@ -11,7 +11,8 @@
             </div>
 
             <div class="col-md-1">
-              <img src="static/favicon.png" height="80" width="80">
+              <img src="static/images/zph-logo-200sq.png" height="80" width="80">
+
             </div>
 
             <div class="col-md-5">
