--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css"  href="/static/css/zakipoint.css">
     <link rel="stylesheet" type="text/css"  href="/static/css/animate.min.css">
 
-    <link rel="shortcut icon" href="static/images/favicon.ico">
+    <link rel="shortcut icon" type="image/png" href="static/images/favicon-transparent.png"/>
 
     {% block headopt %}
     {% endblock %}
@@ -33,11 +33,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><img src="/static/images/logo-blue.png?version={{ version }}"></a>
+          <a class="navbar-brand" href="/"><img width="160" height="30" src="/static/images/logo-blue-transparent.png?version={{ version }}" ></a>
             <ul class="nav">
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
+          <ul class="nav navbar-nav" style="padding-top: 6px;">
 	    {% if session.username %}
             <li><a href="/home#page-top">Overview</a></li>
             <li><a href="/home#cost-driver">Cost Driver</a></li>
@@ -47,7 +47,7 @@
           <ul class="nav navbar-nav navbar-right">
             {% if session.username %}
               <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown"><span class="fa fa-user"></span> {{ fullname }}<span class="caret"></span></a>
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" style="padding-top: 20px;"><span class="fa fa-user"></span> {{ fullname }}<span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li><a href="/signout"><span class="fa fa-sign-out"></span> Signout</a></li>
                   <li><a href="#"><span class="text-muted"><span class="fa fa-user"> Profile</span></a></li>
