First Integration of HSIRX functionality 	deleted:    cee1/settings.py 	deleted:    cee1/wsgi.py 	new file:   home/admin.py 	new file:   home/fixtures.py 	modified:   home/models.py 	modified:   home/session.py 	modified:   home/templates/base.html 	modified:   home/templates/error.html 	modified:   home/templates/home.html 	modified:   home/templates/pop_biom.html 	modified:   home/views.py 	modified:   manage.py 	modified:   static/css/zakipoint.css 	new file:   static/dimages/cedar-rapids-logo.png 	renamed:    cee1/__init__.py -> zphalfa/__init__.py 	new file:   zphalfa/json_field.py 	renamed:    cee1/rpc.py -> zphalfa/rpc.py 	new file:   zphalfa/settings.py 	renamed:    cee1/urls.py -> zphalfa/urls.py 	new file:   zphalfa/wsgi.py

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -137,14 +137,14 @@
           }
         });
     {% block loadscript %}
-    {% endblock %}  <!-- loadscript -->
-      <!-- Javascripts to be loaded after the page is done loading, 
-	   must not include their own script tags,
-	   may include AJAX calls -->
+      /* Javascripts to be loaded after the page is done loading, 
+	 must not include their own script tags,
+	 may include AJAX calls */
+    {% endblock %}  
       });
     </script>
-      {% block pagescript %}
       <!-- Javascripts on the page, must include their own script tags, may include AJAX calls -->
+      {% block pagescript %}
       {% endblock %}  <!-- pagescript -->
 
     <script src="/static/js/bootstrap-growl.min.js"> </script>
