--- a/home/templates/error.html
+++ b/home/templates/error.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-
+{% block headopt %}
+<meta http-equiv="refresh" content="2;url=/" />
+{% endblock %}
 {% block container_content %}
 
 <div class="container">
