--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -1,63 +1,76 @@
 {% extends "base.html" %}
 
 {% block container_content %}
+<!-- hm_flag is {{ hm_flag }} -->
+
 <div id="page-top" />
 <div class="container">
   <div class="row">
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+
+    <div class="col-md-12"><div style="text-align:center; display:block;">
+	{% if hm_flag %}
+	  <img src="static/dimages/cedar-rapids-logo.png?version={{ version }}" style="width: 224px;" />
+	{% else %}
 	  <img src="static/dimages/0916_home_1.png?version={{ version }}" />
+	{% endif %}
     </div></div>
-    <div style="width: 80%; margin: 0 auto;">
+    <div style="text-align:center; display:block;">
       <img src="static/dimages/0911_r2.png?version={{ version }}" />
     </div>
-    <div style="width: 80%; margin: 0 auto;">
+    <div style="text-align:center; display:block;">
     <table width="100%" id="cost-driver">
       <td><hr color="#ccc"/></td>
       <td style="width:1px; padding: 0 10px; white-space: nowrap;">Investigate Costs</td>
       <td><hr color="#ccc" /></td>
     </table>
     </div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+    <div class="col-md-12">
+    <div style="text-align:center; display:block;">
       <img src="static/dimages/20150728_home_4_r0.png?version={{ version }}" class="col-md-12" />
     </div></div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+    <div class="col-md-12">
+    <div style="text-align:center; display:block;" >
       <a href="cost_pharm">
         <img src="static/dimages/0911_cost_pharm.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/0911_cost_er.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/0911_cost_lopgm.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_er.png?version={{ version }}" class="col-md-4 greyed" />
+      <img src="static/dimages/0911_cost_lopgm.png?version={{ version }}" class="col-md-4 greyed" />
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+    <div class="col-md-12">
+    <div style="text-align:center; display:block;">
       <a href="pop_biom">
         <img src="static/dimages/0911_cost_biom.png?version={{ version }}" class="col-md-4" />
       </a>
       <a href="pop_risk">
         <img src="static/dimages/0911_cost_risk.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/0911_cost_high.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_high.png?version={{ version }}" class="col-md-4 greyed" />
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+    <div class="col-md-12">
+    <div style="text-align:center; display:block;">
       <a href="narrow_network">
         <img src="static/dimages/0911_use_netwk.png?version={{ version }}" class="col-md-4" />
       </a>
-      <img src="static/dimages/0911_cost_image.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/0911_cost_gaps.png?version={{ version }}" class="col-md-4" />
+      <img src="static/dimages/0911_cost_image.png?version={{ version }}" class="col-md-4 greyed" />
+      <img src="static/dimages/0911_cost_gaps.png?version={{ version }}" class="col-md-4 greyed" />
     </div></div>
     <div class="col-md-12" style="height: 32px;"></div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
-      <img src="static/dimages/0911_cost_admin.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/0911_cost_spse.png?version={{ version }}" class="col-md-4" />
-      <img src="static/dimages/0911_cost_rdndt.png?version={{ version }}" class="col-md-4" />
+    <div class="col-md-12">
+    <div style="text-align:center; display:block;">
+      <img src="static/dimages/0911_cost_admin.png?version={{ version }}" class="col-md-4 greyed" />
+      <img src="static/dimages/0911_cost_spse.png?version={{ version }}" class="col-md-4 greyed" />
+      <img src="static/dimages/0911_cost_rdndt.png?version={{ version }}" class="col-md-4 greyed" />
     </div></div>
-    <div style="width: 80%; margin: 0 auto;">
+    <div style="text-align:center; display:block;">
     <table width="100%" id="cohorts">
       <td><hr color="#ccc"/></td>
       <td style="width:1px; padding: 0 10px; white-space: nowrap;">Explore the Population</td>
       <td><hr color="#ccc" /></td>
     </table></div>
-    <div class="col-md-12"><div style="width: 80%; margin: 0 auto;">
+    <div class="col-md-12">
+    <div style="text-align:center; display:block;">
       <img src="static/dimages/0911_r4.png?version={{ version }}" />
     </div></div>
   </div>
