--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -3,12 +3,32 @@
 {% block container_content %}
 
   <div class="container">
+  <div class="row">
+
+    <div class="col-md-12"><div style="text-align:center; display:block;">
+	{% if hm_flag %}
+	  <img src="static/dimages/cedar-rapids-logo.png?version={{ version }}" style="width: 224px;" />
+	{% endif %}
+    </div></div>
     <div class="row">
-      <div class="col-md-12">
-	<img src="static/dimages/cost_driver_biometrics_oct6.png?version={{ version }}" />
+      <div class="col-md-12" id="eligible" style="height: 44px; text-align:center; display:block;">
       </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12"><div style="text-align:center; display:block;">
+	<img src="static/dimages/cost_driver_biometrics_oct6.png?version={{ version }}" />
+      </div></div>
     </div>
   </div>
 
 
+{% endblock %}
+{% block loadscript %}
+        $.post('/rpc/1/home/', {'func': 'eligible', 'args': JSON.stringify([])}, function(data) {
+          $("#eligible").html(data);
+        }).fail(function() {
+          alert( "error" );
+        });
+{% endblock %}  <!-- loadscript -->
+{% block pagescript %}
 {% endblock %}
