--- a/static/css/zakipoint.css
+++ b/static/css/zakipoint.css
@@ -107,3 +107,14 @@ body > .container {
     color: #fff;
     background-color: #555;
 }
+
+.centerImage
+{
+text-align:center;
+display:block;
+}
+
+.greyed {
+    opacity: 0.4;
+    filter: alpha(opacity=40); /* msie */
+}
