--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -1,26 +1,61 @@
 {% extends "base.html" %}
 
 {% block container_content %}
+  <link rel="stylesheet" type="text/css"  href="/static/css/barchart.css">
+  <script src="http://d3js.org/d3.v3.min.js"></script>
+  <script src="/static/js/barchart.js"> </script>
+  <!-- Please make sure jQuery is also loaded. -->
 
   <div class="container">
   <div class="row">
 
     <div class="col-md-12"><div style="text-align:center; display:block;">
-	{% if hm_flag %}
-	  <img src="static/dimages/cedar-rapids-logo.png?version={{ version }}" style="width: 224px;" />
-	{% endif %}
+  {% if hm_flag %}
+    <img src="static/dimages/cedar-rapids-logo.png?version={{ version }}" style="width: 224px;" />
+  {% endif %}
     </div></div>
+  {% if hm_data %}
+
     <div class="row">
       <p>Eligible</p>
-      <div class="col-md-12" id="eligible" style="height: 44px; text-align:center; display:block;">
+      <div class="col-md-12" id="eligible" style="height: 44px; text-align:left; display:block;">
       </div></div>
     <div class="row">
       <p>Participating</p>
-      <div class="col-md-12" id="participating" style="height: 44px; text-align:center; display:block;">
+      <div class="col-md-12" id="participating" style="height: 44px; text-align:left; display:block;">
+      </div></div>
+
+    <div class="row">
+      <p>Members Participating</p>
+      <div class="col-md-12" id="members_participating" style="height: 44px; text-align:left; display:block;">
       </div></div>
     <div class="row">
+      <p>Expenses Participating</p>
+      <div class="col-md-12" id="expenses_participating" style="height: 44px; text-align:left; display:block;">
+      </div></div>
+
+    <div class="row">
+      <p>All Members</p>
+      <div class="col-md-12" id="members_all" style="height: 44px; text-align:left; display:block;">
+      </div></div>
+    <div class="row">
+      <p>All Expenses</p>
+      <div class="col-md-12" id="expenses_all" style="height: 44px; text-align:left; display:block;">
+      </div></div>
+
+    <div class="row">
+      <p>Engaged Members</p>
+      <div class="col-md-12" id="members_engaged" style="height: 44px; text-align:left; display:block;">
+      </div></div>
+    <div class="row">
+      <p>Engaged Expenses</p>
+      <div class="col-md-12" id="expenses_engaged" style="height: 44px; text-align:left; display:block;">
+      </div></div>
+  {% endif %}
+
+    <div class="row">
       <div class="col-md-12"><div style="text-align:center; display:block;">
-	<img src="static/dimages/cost_driver_biometrics_oct6.png?version={{ version }}" />
+  <img src="static/dimages/cost_driver_biometrics_oct6.png?version={{ version }}" />
       </div></div>
     </div>
   </div>
@@ -29,8 +64,22 @@
 {% endblock %}
 {% if hm_flag %}
 {% block loadscript %}
+
+    
+    
+
         $.post('/rpc/1/home/', {'func': 'eligible', 'args': JSON.stringify([])}, function(data) {
-          $("#eligible").html(data);
+      $("#eligible").html(data);
+
+      console.log(data);
+      data = JSON.parse(data);
+
+      var margin = {top: 70, right: 20, bottom: 20, left: 20},
+        width = 400 - margin.left - margin.right,
+        height = 250 - margin.top - margin.bottom;
+
+      generateBarChart(data, margin, width, height);
+
         }).fail(function() {
           $("#eligible").html('Error with eligibility rates');
         }); 
@@ -39,6 +88,39 @@
           $("#participating").html(data);
         }).fail(function() {
           $("#participating").html('Error with participation rates');
+        });
+
+        $.post('/rpc/1/home/', {'func': 'members_participating', 'args': JSON.stringify([])}, function(data) {
+          $("#members_participating").html(data);
+        }).fail(function() {
+          $("#members_participating").html('Error with members_participating');
+        });
+        $.post('/rpc/1/home/', {'func': 'expenses_participating', 'args': JSON.stringify([])}, function(data) {
+          $("#expenses_participating").html(data);
+        }).fail(function() {
+          $("#expenses_participating").html('Error with expenses_participating');
+        });
+
+        $.post('/rpc/1/home/', {'func': 'members_all', 'args': JSON.stringify([])}, function(data) {
+          $("#members_all").html(data);
+        }).fail(function() {
+          $("#members_all").html('Error with members_all');
+        });
+        $.post('/rpc/1/home/', {'func': 'expenses_all', 'args': JSON.stringify([])}, function(data) {
+          $("#expenses_all").html(data);
+        }).fail(function() {
+          $("#expenses_all").html('Error with expenses_all');
+        });
+
+        $.post('/rpc/1/home/', {'func': 'members_engaged', 'args': JSON.stringify([])}, function(data) {
+          $("#members_engaged").html(data);
+        }).fail(function() {
+          $("#members_engaged").html('Error with members_engaged');
+        });
+        $.post('/rpc/1/home/', {'func': 'expenses_engaged', 'args': JSON.stringify([])}, function(data) {
+          $("#expenses_engaged").html(data);
+        }).fail(function() {
+          $("#expenses_engaged").html('Error with expenses_engaged');
         });
 
 {% endblock %}  <!-- loadscript -->
