--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -15,6 +15,9 @@
     <link rel="stylesheet" type="text/css"  href="/static/css/animate.min.css">
 
     <link rel="shortcut icon" type="image/png" href="static/images/favicon-transparent.png"/>
+        <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css" type="text/css"/>
+        <script src="//code.jquery.com/jquery-1.10.2.js" type="text/javascript"></script>
+        <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js" type="text/javascript"></script>
 
     {% block headopt %}
     {% endblock %}
