New frame with working tabs 	modified:   home/templates/base.html 	modified:   home/templates/pop_biom.html 	modified:   home/views.py 	modified:   static/css/zakipoint.css

--- a/home/templates/pop_biom.html
+++ b/home/templates/pop_biom.html
@@ -2,6 +2,7 @@
 
 {% block container_content %}
   <link rel="stylesheet" type="text/css"  href="/static/css/barchart.css">
+  <link rel="stylesheet" type="text/css"  href="/static/css/pop_biom.css">
   <script src="http://d3js.org/d3.v3.min.js"></script>
   <script src="/static/js/barchart.js"> </script>
   <!-- Please make sure jQuery is also loaded. -->
